RELEASE NOTES
=============

This is omniORB 4.1.3.

See README.unix or README.win32.txt for building instructions.
See the documentation in the doc directory for more information.



Changes since omniORB 4.1.2
---------------------------

 - Bug fixes. See bugfixes-412.xml

 - Port to LynxOS.



Changes since omniORB 4.1.1
---------------------------

 - Bug fixes. See bugfixes-411.xml.

 - omniNames Windows service support. See doc/omniNames.pdf.

 - Support for multi-endpoint SSL IORs (using an extremely minimal
   subset of CSIv2).



Changes since omniORB 4.1.0
---------------------------

 - Bug fixes. See bugfixes-410.xml.

 - Documentation updates.

 - Support for new platforms and compilers.

 - New configuration parameters: socketSendBuffer, resetTimeOutOnRetries.

 - New -Wbguard_prefix option to omniidl.

 - Small performance improvements.


Changes since omniORB 4.1.0 release candidate 2
-----------------------------------------------

 - Bug fixes.


Changes since omniORB 4.1.0 release candidate 1
-----------------------------------------------

 - Modified Windows platform files and DLL names. Platforms are now
   x86_win32_vs_*

 - Minor bug fixes.


Changes since omniORB 4.1.0 beta 2
----------------------------------

 - Incompatible change to the clientSendRequest interceptor members.
   Application code using the interceptor will require a small
   modification.

 - Support for insertion / extraction of various types from standard
   iostreams.

 - More comprehensive logging of connection and protocol errors.

 - Experimental omniConnectionMgmt extension.

 - Minor bug fixes.


Changes since omniORB 4.1.0 beta 1
----------------------------------

 - IPv6 support.

     See section 8.6.1 of the omniORB manual for details.

 - New endPointPublish parameter.

     Used for configuring what to publish in IORs. See section 8.6.2
     of the omniORB manual.

 - Minor bug fixes.


Changes since omniORB 4.0.x
---------------------------
